--- a/public/acm/AlaatvCustomFiles/components/CustomDropDown/style.css
+++ b/public/acm/AlaatvCustomFiles/components/CustomDropDown/style.css
@@ -7,13 +7,37 @@
     height: 50px;
     line-height: 30px;
     border-radius: 5px;
+
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+}
+.CustomDropDown.CustomParentOptions {
+    height: auto;
+    display: none;
+}
+.CustomDropDown.CustomParentOptions.CustomDropDown-show {
+    display: block;
+    position: relative;
 }
 
 .CustomDropDown select {
     display: none; /*hide original SELECT element: */
 }
+.CustomDropDown.solidBackground .select-selected {
+    border: none;
+}
+.CustomDropDown.solidBackground.background-yellow .select-selected {
+background: #fc0;
+}
+.CustomDropDown.solidBackground.background-yellow .select-selected::after {
+    color: #020200;
+}
 
-.select-selected {
+.CustomDropDown .select-selected {
     background-color: white;
     color: #575962;
     position: absolute;
@@ -27,7 +51,7 @@
 }
 
 /* Style the arrow inside the select element: */
-.select-selected:after {
+.CustomDropDown .select-selected:after {
     position: absolute;
     top: 0;
     left: 0;
@@ -44,12 +68,13 @@
 }
 
 /* Point the arrow upwards when the select box is open (active): */
-.select-selected.select-arrow-active:after {
+.CustomDropDown .select-selected.select-arrow-active:after {
     content: "\f106";
 }
 
 /* style the items (options), including the selected item: */
-.select-items div,.select-selected {
+.CustomDropDown .select-items .select-item,
+.CustomDropDown .select-selected {
     padding: 8px 16px;
     border: 1px solid transparent;
     border-color: rgba(0, 0, 0, 0.1) transparent transparent transparent;
@@ -57,15 +82,18 @@
 }
 
 /* Style items (options): */
-.select-items {
+.CustomDropDown .select-items {
     position: absolute;
     background-color: white;
     color: #575962;
     top: 100%;
     left: 0;
     right: 0;
-    z-index: 99;
+    z-index: 90;
     border: solid 1px rgba(0, 0, 0, 0.1);
+}
+.CustomDropDown.CustomParentOptions .select-items {
+    position: relative;
 }
 
 /* Hide the items when the select box is closed: */
@@ -73,6 +101,6 @@
     display: none;
 }
 
-.select-items div:hover, .same-as-selected {
+.CustomDropDown .select-items .select-item:hover, .same-as-selected {
     background-color: rgba(0, 0, 0, 0.1);
 }
