--- a/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
@@ -58,7 +58,31 @@
             flex-shrink: 0;
         }
 
-        @mixin make-size-media($sizeName,
+        @mixin make-size-media-min-width($minWidth, $sizeName, $calcWidth) {
+
+            @media (min-width: #{$minWidth}px) {
+                .item.#{$sizeName} {
+                    width: $calcWidth;
+                    -webkit-flex-basis: $calcWidth;
+                    -ms-flex-basis: $calcWidth;
+                    flex-basis: $calcWidth;
+                }
+            }
+        }
+
+        @mixin make-size-media-minmax-width($minWidth, $maxWidth, $sizeName, $calcWidth) {
+
+            @media (min-width: #{$minWidth}px) and (max-width: #{$maxWidth}px) {
+                .item.#{$sizeName} {
+                    width: $calcWidth;
+                    -webkit-flex-basis: $calcWidth;
+                    -ms-flex-basis: $calcWidth;
+                    flex-basis: $calcWidth;
+                }
+            }
+        }
+
+        @mixin make-size($sizeName,
                                     $column-count-1701pxToHigher,
                                     $column-count-BW1281pxTo1700px,
                                     $column-count-BW1025pxTo1280px,
@@ -74,57 +98,29 @@
               ##Device = Desktops
               ##Screen = 1701px to higher resolution desktops
             */
-            @media (min-width: 1701px) {
-                .item.#{$sizeName} {
-                    $calcWidth: percentage(floor((100/((3*$column-count-1701pxToHigher)+1))*3)/100);
-                    width: $calcWidth;
-                    -webkit-flex-basis: $calcWidth;
-                    -ms-flex-basis: $calcWidth;
-                    flex-basis: $calcWidth;
-                }
-            }
+            $calcWidth: percentage(floor((100/((3*$column-count-1701pxToHigher)+1))*3)/100);
+            @include make-size-media-min-width('1701', $sizeName, $calcWidth);
 
             /*
               ##Device = Desktops
               ##Screen = B/w 1281px to 1700px
             */
-            @media (min-width: 1281px) and (max-width: 1700px) {
-                .item.#{$sizeName} {
-                    $calcWidth: percentage(floor((100/((3*$column-count-BW1281pxTo1700px)+1))*3)/100);
-                    width: $calcWidth;
-                    -webkit-flex-basis: $calcWidth;
-                    -ms-flex-basis: $calcWidth;
-                    flex-basis: $calcWidth;
-                }
-            }
+            $calcWidth: percentage(floor((100/((3*$column-count-BW1281pxTo1700px)+1))*3)/100);
+            @include make-size-media-minmax-width('1281', '1700', $sizeName, $calcWidth);
 
             /*
               ##Device = Laptops, Desktops
               ##Screen = B/w 1025px to 1280px
             */
-            @media (min-width: 1025px) and (max-width: 1280px) {
-                .item.#{$sizeName} {
-                    $calcWidth: percentage(floor((100/((3*$column-count-BW1025pxTo1280px)+1))*3)/100);
-                    width: $calcWidth;
-                    -webkit-flex-basis: $calcWidth;
-                    -ms-flex-basis: $calcWidth;
-                    flex-basis: $calcWidth;
-                }
-            }
+            $calcWidth: percentage(floor((100/((3*$column-count-BW1025pxTo1280px)+1))*3)/100);
+            @include make-size-media-minmax-width('1025', '1280', $sizeName, $calcWidth);
 
             /*
               ##Device = Tablets, Ipads (portrait)
               ##Screen = B/w 768px to 1024px
             */
-            @media (min-width: 768px) and (max-width: 1024px) {
-                .item.#{$sizeName} {
-                    $calcWidth: percentage(floor((100/((3*$column-count-BW768pxTo1024px)+1))*3)/100);
-                    width: $calcWidth;
-                    -webkit-flex-basis: $calcWidth;
-                    -ms-flex-basis: $calcWidth;
-                    flex-basis: $calcWidth;
-                }
-            }
+            $calcWidth: percentage(floor((100/((3*$column-count-BW768pxTo1024px)+1))*3)/100);
+            @include make-size-media-minmax-width('768', '1024', $sizeName, $calcWidth);
 
             /*
               ##Device = Tablets, Ipads (landscape)
@@ -144,29 +140,15 @@
               ##Device = Low Resolution Tablets, Mobiles (Landscape)
               ##Screen = B/w 481px to 767px
             */
-            @media (min-width: 481px) and (max-width: 767px) {
-                .item.#{$sizeName} {
-                    $calcWidth: percentage(floor((100/((3*$column-count-BW481pxTo767px)+1))*3)/100);
-                    width: $calcWidth;
-                    -webkit-flex-basis: $calcWidth;
-                    -ms-flex-basis: $calcWidth;
-                    flex-basis: $calcWidth;
-                }
-            }
+            $calcWidth: percentage(floor((100/((3*$column-count-BW481pxTo767px)+1))*3)/100);
+            @include make-size-media-minmax-width('481', '767', $sizeName, $calcWidth);
 
             /*
               ##Device = Most of the Smartphones Mobiles (Portrait)
               ##Screen = B/w 320px to 480px
             */
-            @media (min-width: 320px) and (max-width: 480px) {
-                .item.#{$sizeName} {
-                    $calcWidth: percentage(floor((100/((3*$column-count-BW320pxTo480px)+1))*3)/100);
-                    width: $calcWidth;
-                    -webkit-flex-basis: $calcWidth;
-                    -ms-flex-basis: $calcWidth;
-                    flex-basis: $calcWidth;
-                }
-            }
+            $calcWidth: percentage(floor((100/((3*$column-count-BW320pxTo480px)+1))*3)/100);
+            @include make-size-media-minmax-width('320', '480', $sizeName, $calcWidth);
 
             @media (max-width: 320px) {
                 .item.#{$sizeName} {
@@ -179,7 +161,7 @@
             }
         }
 
-        @include make-size-media('w-44333211',
+        @include make-size('w-44333211',
             4,
             4,
             3,
@@ -192,7 +174,7 @@
 
         //w-66534321
 
-        @include make-size-media('w-55443211',
+        @include make-size('w-55443211',
             5,
             5,
             4,
