--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
@@ -4,6 +4,43 @@
         box-shadow: none;
         margin-bottom: 10px;
 
+
+
+        @-webkit-keyframes carouselHeadPuls {
+            0% { right:-2%;opacity: 1;}
+            50% {right:40%;opacity: 0.4;}
+            100%{ right:100%;opacity: 0;}
+        }
+        @keyframes carouselHeadPuls {
+            0% { right:-2%;opacity: 1;}
+            50% {right:40%;opacity: 0.4;}
+            100%{ right:100%;opacity: 0;}
+        }
+
+        .a--owl-carousel-head.puls * {
+            z-index: 0;
+        }
+        .a--owl-carousel-head.puls .puls1,
+        .a--owl-carousel-head.puls .puls2 {
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 100%;
+            width: 250px;
+            animation-name: carouselHeadPuls;
+            animation-duration: 3s;
+            animation-iteration-count: infinite;
+            transform: skew(-65deg);
+            background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255, 144, 0, 0.38) 100%);
+            z-index: 0;
+        }
+        .a--owl-carousel-head.puls .puls2 {
+            animation-delay: 0.2s;
+        }
+
+
+
+
         .a--owl-carousel-head {
             overflow: hidden;
             background: white;
