--- a/public/acm/AlaatvCustomFiles/css/page/content-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/content-show.css
@@ -161,37 +161,11 @@
     height: 50px;
 }
 
-/*@-webkit-keyframes carouselHeadPuls {*/
-/*    0% { left:0px;opacity: 0;}*/
-/*    50% {left:20px;opacity: 0.3;}*/
-/*    100%{ left:100px;opacity: 0;}*/
-/*}*/
-@keyframes carouselHeadPuls {
-    0% { right:-2%;opacity: 1;}
-    50% {right:40%;opacity: 0.4;}
-    100%{ right:100%;opacity: 0;}
+#playListScroller .a-widget5__item .a-widget5__content .a-widget5__section .a-widget5__info .content-description {
+    font-size: 1rem;
+    line-height: 1.5rem;
 }
 
-.a--owl-carousel-Wraper .a--owl-carousel-head.puls * {
-    z-index: 0;
-}
-.a--owl-carousel-Wraper .a--owl-carousel-head.puls .puls1,
-.a--owl-carousel-Wraper .a--owl-carousel-head.puls .puls2 {
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 250px;
-    animation-name: carouselHeadPuls;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    transform: skew(-65deg);
-    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255, 144, 0, 0.38) 100%);
-    z-index: 0;
-}
-.a--owl-carousel-Wraper .a--owl-carousel-head.puls .puls2 {
-    animation-delay: 0.2s;
-}
 /*media query*/
 @media only screen and (max-width: 1100px) and (min-width: 992px) {
     .a-widget5 .a-widget5__item .a-widget5__content .a-widget5__pic,
